[gd_scene load_steps=10 format=3 uid="uid://dxh4tyqcajomd"]

[ext_resource type="Script" uid="uid://dn8k5cxtijpqx" path="res://Scripts/play_menu.gd" id="1_0tt47"]
[ext_resource type="Texture2D" uid="uid://dumpdiil1vd26" path="res://Assets/Background.png" id="1_mr28t"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d51w7"]
texture = ExtResource("1_mr28t")
modulate_color = Color(0.589096, 0.589096, 0.589096, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p52fh"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jfemi"]
bg_color = Color(0.77084, 0.770839, 0.770839, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jxxj7"]
bg_color = Color(0.572988, 0.572988, 0.572988, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_16hx3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mi1hj"]
bg_color = Color(0.347817, 0.347817, 0.347817, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ht8ej"]
bg_color = Color(0.724643, 0.724643, 0.724642, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="PlayMenu" type="Control" node_paths=PackedStringArray("ADDRESSENTRY")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0tt47")
ADDRESSENTRY = NodePath("Join Remote Stuff/AddressEntry")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_d51w7")

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = -281.0
offset_right = 296.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Host" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_p52fh")
theme_override_styles/hover = SubResource("StyleBoxFlat_jfemi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jxxj7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_16hx3")
text = "Host"

[node name="Join Local" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_p52fh")
theme_override_styles/hover = SubResource("StyleBoxFlat_jfemi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jxxj7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_16hx3")
text = "Join Local"

[node name="Join Remote Stuff" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 280.0
offset_top = 454.0
offset_right = 872.0
offset_bottom = 561.0
theme_override_constants/separation = 20
alignment = 1

[node name="AddressEntry" type="LineEdit" parent="Join Remote Stuff"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_mi1hj")
theme_override_styles/focus = SubResource("StyleBoxFlat_ht8ej")
placeholder_text = "Enter Address to Join"
alignment = 1

[node name="Join Remote" type="Button" parent="Join Remote Stuff"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_p52fh")
theme_override_styles/hover = SubResource("StyleBoxFlat_jfemi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jxxj7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_16hx3")
text = "Join Remote"

[connection signal="pressed" from="Buttons/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Buttons/Join Local" to="." method="_on_join_local_pressed"]
[connection signal="pressed" from="Join Remote Stuff/Join Remote" to="." method="_on_join_remote_pressed"]
